# Simplified-MTG

./: README.md
docs/: MTG_engine_documentation.md  user_documentation.md
src/Windows/: CMakeLists.txt
src/Windows/MTG_engine/: CMakeLists.txt  INI_parser.cpp  INI_parser.hpp  MTG_engine.cpp  ability.cpp  ability.hpp  card.hpp  card_factory.hpp  color.hpp  damagable.hpp  deck.hpp  effect.cpp  effect.hpp  effect_factory.cpp  effect_factory.hpp  game.cpp  game.hpp  phase.hpp  player.hpp  types.hpp
src/Windows/decks/: red.ini
